tests/bad/typcheck4.tig
let type any = { any : int }

var test_record_nil1 := nil

in test_record_nil1 := any { any = 3 }
end
